--- a/myblogapp.client/src/custom.css
+++ b/myblogapp.client/src/custom.css
@@ -4,3 +4,19 @@
     padding: 10px;
     border-radius: 10px;
   }
+
+  .user-short {
+    display: flex;
+    margin: 5%;
+    cursor: pointer;
+  }
+
+  .user-short-img {
+    width: 20%;
+  }
+
+  .user-short-data {
+    display: flex;
+    justify-content: center;
+    margin-left: 5%;
+  }
