--- a/myblogapp.client/src/custom.css
+++ b/myblogapp.client/src/custom.css
@@ -1,22 +1,36 @@
 .news-item {
-    background-color: #646cff30;
-    margin: 10px;
-    padding: 10px;
-    border-radius: 10px;
-  }
+  background-color: #646cff30;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 15px;
+}
 
-  .user-short {
-    display: flex;
-    margin: 5%;
-    cursor: pointer;
-  }
+.news-item .img-box {
+  width: 50%;
+  height: 50%;
+}
+.news-item .news-actions {
+  display: flex;
+  justify-content: flex-end;
+}
 
-  .user-short-img {
-    width: 20%;
-  }
+.user-short {
+  display: flex;  
+  margin: 5%;
+  cursor: pointer;
+}
 
-  .user-short-data {
-    display: flex;
-    justify-content: center;
-    margin-left: 5%;
-  }
+.user-short-img {
+  width: 20%;
+}
+
+.user-short-data {
+  display: flex;
+  justify-content: center;
+  margin-left: 5%;
+}
+
+.image-box {
+  width: 50%;
+  height: 50%;
+}
